--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,6 @@
 @import "blocks/action";
 @import "blocks/reviews";
 @import "blocks/review-card";
+@import "blocks/double-container";
+@import "blocks/free-lesson";
+@import "blocks/contacts";
