--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,32 @@
 .contacts {
-  min-width: 459px;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
   padding: 70px 0 40px;
+}
+
+.contacts::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #74819c;
+}
+
+.contacts::after {
+  content: "";
+  position: absolute;
+  left: 100%;
+  top: 0;
+  width: 100vw;
+  height: 1px;
+  background-color: #74819c;
+}
+
+.contacts__inner {
+  min-width: 459px;
 }
 
 .contacts h2 {
