Делает footer mobile

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -157,7 +157,7 @@
 @media (max-width: $tablet-width - 1) {
   .contacts__inner {
     width: $mobile-container-width;
-    padding: 69px 2px 0;
+    padding: 69px 2px 43px;
   }
 
   .contacts h2 {
