--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -3,7 +3,10 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   min-width: 320px;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Roboto Condensed", "Arial", sans-serif;
