--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -165,12 +165,17 @@
 }
 
 @media (max-width: $desktop-container-width - 1) {
-  .main-block__inner {
-    width: $tablet-width;
-    padding: 39px 0 82px;
+  .main-block {
     background: url("#{$prefix-css-img}main-block-bg-tablet@1x.jpg") no-repeat center 0;
 
     @include bg-retina("main-block-bg-tablet@2x.jpg");
+    background-size: cover;
+  }
+
+  .main-block__inner {
+    width: $tablet-width;
+    padding: 39px 0 82px;
+    background: none;
   }
 
   .main-block__top {
@@ -241,12 +246,16 @@
 }
 
 @media (max-width: $tablet-width - 1) {
-  .main-block__inner {
-    width: $mobile-width;
-    padding: 19px 0 82px;
+  .main-block {
     background: url("#{$prefix-css-img}main-block-bg-mobile@1x.jpg") no-repeat center 0;
 
     @include bg-retina("main-block-bg-mobile@2x.jpg");
+    background-size: cover;
+  }
+
+  .main-block__inner {
+    width: $mobile-width;
+    padding: 19px 0 82px;
   }
 
   .main-block__top {
