--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "mixins";
 @import "normalize";
+@import "blocks/slick";
+@import "blocks/slick-theme";
 @import "fonts";
 @import "scaffolding";
 @import "blocks/main-block";
