--- a/source/sass/blocks/action.scss
+++ b/source/sass/blocks/action.scss
@@ -207,8 +207,14 @@
 }
 
 @media (max-width: $tablet-width - 1) {
+  $max_view: $tablet-width - 1;
+  $min_view: $mobile-width;
+
   .action__inner {
-    width: $mobile-container-width;
+    $max_width: $max_view - 2 * 45px;
+    $min_width: $mobile-container-width - 4;
+    $rate: ($max_width - $min_width) / ($max_view - $min_view);
+    width: calc((100vw - #{$min_view}) * #{$rate} + #{$min_width});
     padding: 70px 0 0;
   }
 
@@ -224,7 +230,7 @@
   }
 
   .action__text-container {
-    width: 290px;
+    width: 100%;
     min-height: 299px;
     text-align: center;
   }
@@ -238,12 +244,12 @@
   }
 
   .action__image {
-    width: 290px;
+    width: 100%;
     height: 299px;
     background: #4675e1 url("#{$prefix-css-img}actions-mobile@1x.jpg") no-repeat 0 0;
 
     @include bg-retina("actions-mobile@2x.jpg");
-    background-size: 290px 299px;
+    background-size: cover;
   }
 
   .action__other {
@@ -253,13 +259,15 @@
   }
 
   .action__other li {
-    width: 290px;
+    $border_width: 7;
+    width: 100%;
     height: 211px;
     margin: 0 0 30px;
-    padding: 37px 35px 46px;
+    padding: calc(37px - #{$border_width}px) calc(35px - #{$border_width}px) calc(46px - #{$border_width}px);
     text-align: center;
-    background: url("#{$prefix-css-img}action-bg-mobile.svg") no-repeat 0 0;
-    background-size: 290px 211px;
+    background: #ffffff;
+    border: #{$border_width}px solid;
+    border-image: linear-gradient(111.72deg, #ed0233 17.6%, #003eb7 95.31%) #{$border_width};
   }
 
   .action__other a {
