--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -62,7 +62,7 @@
       }
 
       &--reviews {
-        width: $review_card_mobile_width + 2 * $review_margin;
+        width: 100%;
         margin: 0;
       }
     }
