--- a/source/sass/blocks/slick-theme.scss
+++ b/source/sass/blocks/slick-theme.scss
@@ -8,6 +8,7 @@ $slick-opacity-not-active: 0.25 !default;
 .slick-prev,
 .slick-next {
   position: absolute;
+  z-index: 1;
   top: 50%;
   transform: translate(0, -50%);
   display: block;
