Делает advantages mobile резину по рекомендации тестера

--- a/source/sass/blocks/advantage-top.scss
+++ b/source/sass/blocks/advantage-top.scss
@@ -67,7 +67,7 @@
 
 @media (max-width: $tablet-width - 1) {
   .advantage-top {
-    width: $mobile-width;
+    width: 100vw;
     min-height: auto;
     margin: 0 0 48px;
     padding: 40px 0 43px;
