--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -104,7 +104,7 @@
 
 @media (max-width: $tablet-width - 1) {
   .offer {
-    width: 290px;
+    width: 100%;
     height: 384px;
     margin: 0 auto 35px;
     padding: 51px - 7px 0 0;
