--- a/source/sass/blocks/trainer-card.scss
+++ b/source/sass/blocks/trainer-card.scss
@@ -153,39 +153,59 @@
   $trainer-card-height: $trainer-card-mobile-height;
 
   .trainer-card {
-    max-width: $trainer-card-width;
-    height: $trainer-card-height;
+    $max_view: $tablet-width - 1;
+    $min_view: $mobile-width;
+    $max_width: $trainer-card-width * 2;
+    $min_width: $trainer-card-width;
+    $rate_w: ($max_width - $min_width) / ($max_view - $min_view);
+    $max_height: $trainer-card-mobile-height * 2;
+    $min_height: $trainer-card-mobile-height;
+    $rate_h: ($max_height - $min_height) / ($max_view - $min_view);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: calc((100vw - #{$min_view}) * #{$rate_w} + #{$min_width});
+    height: calc((100vw - #{$min_view}) * #{$rate_h} + #{$min_height});
 
     &--1 {
       background: #263b64 url("#{$prefix-css-img}trainer1-desktop@1x.jpg") no-repeat 0 0;
 
       @include bg-retina("trainer1-desktop@2x.jpg");
-      background-size: $trainer-card-width $trainer-card-height;
+      background-size: cover;
     }
 
     &--2 {
       background: #263b64 url("#{$prefix-css-img}trainer2-desktop@1x.jpg") no-repeat 0 0;
 
       @include bg-retina("trainer2-desktop@2x.jpg");
-      background-size: $trainer-card-width $trainer-card-height;
+      background-size: cover;
     }
 
     &--3 {
       background: #263b64 url("#{$prefix-css-img}trainer3-mobile@1x.jpg") no-repeat 0 0;
 
       @include bg-retina("trainer3-mobile@2x.jpg");
-      background-size: $trainer-card-width $trainer-card-height;
+      background-size: cover;
     }
 
     &--4 {
       background: #263b64 url("#{$prefix-css-img}trainer4-desktop@1x.jpg") no-repeat 0 0;
 
       @include bg-retina("trainer4-desktop@2x.jpg");
-      background-size: $trainer-card-width $trainer-card-height;
+      background-size: cover;
     }
 
     &:hover {
+      display: block;
       padding: 46px 0 0;
     }
+  }
+
+  .trainer-card__name {
+    margin-bottom: 30px;
+  }
+
+  .trainer-card:hover .trainer-card__name {
+    margin-bottom: auto;
   }
 }
